[#2591] bug fix. - modify css about text-overflow.

--- a/naver-web/src/main/webapp/v2/src/app/core/components/server-list/server-list.component.css
+++ b/naver-web/src/main/webapp/v2/src/app/core/components/server-list/server-list.component.css
@@ -7,7 +7,7 @@
     white-space : nowrap;
     text-overflow : ellipsis;
 }
-.l-server-name a {
+.l-servers-list a {
     float: right;
     border: 1px solid #9ec9e5;
     margin: 0px 2px;
